# MEPHIT

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSources.txt  FindSuperLU.cmake  FindTriangle.cmake  Makefile  ProjectConfig.cmake.in  ProjectConfig.cmake.in.archlinux  ProjectConfig.cmake.in.itp  ProjectConfig.cmake.in.mac  ProjectConfig.cmake.in.sample  README.md  bdivfree.f90  doxygen.conf  from_nrtype.f90  grid1.tpx  kin2d.inp  magdif.f90  magdif.lyx  magdif_fdm.py  magdif_new.lyx  magdif_test.f90  mesh_mod.f90  orbit_mod.f90  pyproject.toml  requirements.txt  setup-debian.sh  setup_debian.sh  simple_fdm.py  spline5_RZ.f90
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
DOC/: .gitignore  Makefile  altitudes.tikz  current_perturbation.tikz  doxygen.conf  eigs.tex  eigs.tpx  grid0.tpx  grid1.tpx  grid2.tpx  latexmkrc  local_coordinates.tikz  magdif.bib  magdif.tex  magdif_chris.lyx  magdif_chris.tex  magdif_new.lyx  magdif_new.tex  magdif_pl.tex  magdif_short.lyx  magdif_short.tex  rescaling.md  snippets.tex  todo.org  writeup_iterations.lyx  writeup_iterations.tex
DOC/SRC/: appendix.tex  definitions.tex  fem.tex  geometry.tex  idealmhd.tex  inputs.tex  iter.tikz  linmhd.tex  local_coordinates.tikz  notation.tex  numbering_nodes.tikz  numbering_triangles.tikz  results.tex  snippets.tex  task.tex  tests.tex
FEM/: .gitignore  L2int.edp  convert_mesh.py  helmholtz.edp  helmholtz_testdata.edp  magdif.idp  maxwell.cpp  maxwell.edp  maxwell.py  maxwell_TEST.edp  maxwell_fenics.py  maxwell_fenics_TEST.py  maxwell_firedrake.py  maxwell_real.edp  plot_triflux.py  snippets.edp  test_fenics.py  test_firedrake.py
MHD/: .gitignore  FIELD  L2int.sh  Makefile  VACFIELD  averquad.py  cleanup.sh  dump_plots.sh  fem_config.py  field_divB0.inp  grid.tpx  magdif.in  magdif_minimal_example.in  magdif_test.sh  maxwell.sh  maxwell_real.sh  run_testcases.sh  test_nonres_direct_highdens.in  test_nonres_direct_lowdens.in  test_nonres_precon_highdens.in  test_nonres_precon_lowdens.in  test_res_direct_highdens.in  test_res_direct_lowdens.in  test_res_precon_highdens.in  test_res_precon_lowdens.in
MHD/SCRIPTS/: debug_currents.py  magdif_test.py  plot_currents.edp  pytchfort.py  simple_fdm.py
MHD/SRC/: #magdif_test.jl#  field_divB0.f90  from_nrtype.f90  magdif.f90  magdif.old.f90  magdif_config.f90  magdif_test.f90  magdif_test.jl  magdif_util.f90  mesh_mod.f90  snippets.f90  sparse.f90.sample  spline5_RZ.f90
PRELOAD/: .gitignore  Axis.mk  Makefile  RC.mk  Vacfield.mk  Writeout.mk  extmesh.edp  extmesh.py  field_divB0.inp  medit.edp  prepare_mesh.sh  prepare_vacfield.sh  scale_kilca.m  use_efit.sh
PRELOAD/FIELD/: 17151.wall_full  g000001.0001_TCFP  g000001.0001_TCFP_unscaled
PRELOAD/SRC/: averquad.f90  axis.f90  axis.f90.160725  axis.f90.orig  bdivfree.f90  field_line_integration_for_SYNCH.f90  flt_phi.f90  geomint_mesh.f90  inside_of_wall.f90  leastsq.f90  lubksb.f  ludcmp.f  merge_qq_tri.f90  mesh_mod.f90  minimal_example.f90  mods4ax.f90  odeint.f  odeint_allroutines.f  orbit_mod.f90  points_2d.f90  polylag.f  preload_for_SYNCH.f90  readcarre_m.f90  readcarre_m.f90.09.03.17  rkck.f  rkqs.f  rtbis.f90  vacfield.f90
PRELOAD/VACFIELD/: .gitignore  field_divB0.inp  generate_hpsi_vac.edp  maxwell.msh  preprocess_edges.edp  vacfield.x
RUN/: .gitignore  K2d_lf.mk  Q_profile.mk  Result_spectrum.mk  Test_arnoldi.mk  along_line.inp  kin2d.inp  orig.kin2d.inp  plot_line.py  test_arnoldi.py
RUN/PLOTTING/: comp_gpec.py  comp_magdif.py  comp_nonres.py  comp_precon.py  fig1_mesh.py  fig3_bvac.py  fig_common.py  fig_spectrum.py  fig_spectrum_mst1.py  loadmesh.py  magdifplot.py  polplot.py  triplot.py  triplots.py
SRC/: bdivfree.f90  field_divB0.f90  magdif.f90  magdif_test.f90
cmake/: SetupCODE.cmake  SetupFGSL.cmake  SetupLIBNEO.cmake  SetupMFEM.cmake  SetupTriangle.cmake  setup_triangle.sh
data/: 17151.3800.AUGD.EQI.00.efit  Bl1n.asc  Bl2n.asc  Bl3n.asc  Bl4n.asc  Bl5n.asc  Bl6n.asc  Bl7n.asc  Bl8n.asc  Bu1n.asc  Bu2n.asc  Bu3n.asc  Bu4n.asc  Bu5n.asc  Bu6n.asc  Bu7n.asc  Bu8n.asc  g000001.0001_TCFP_lop  g30835.3200_EQH  g33353.2325  kin2d.inp  magdif.in  magdif_minimal_example.in  mephit_g000001.0001_TCFP_hip.in  mephit_g33353.2325.in  mephit_g33353_2900_EQH.in  mephit_illustration.in  preload_for_SYNCH.inp  test_nonres_direct_highdens.in  test_nonres_direct_lowdens.in  test_nonres_precon_highdens.in  test_nonres_precon_lowdens.in  test_res_direct_highdens.in  test_res_direct_lowdens.in  test_res_precon_highdens.in  test_res_precon_lowdens.in
scripts/: GPEC_debugging_plots.py  L2int.edp  L2int.sh  MDE_validation_plots.py  arnoldi_plots.py  check_furth.m  check_furth.py  check_j0phi.py  check_q.py  comp_Bnvac.py  comp_RT0.edp  comp_RT0.py  comp_equil.py  comp_gpec.py  comp_jnpar.py  comp_jnpar_gpec.py  comp_kilca.py  comp_magdif.py  comp_nonres.py  constrained_delaunay.py  debug_GL2.m  debug_MDE.m  debug_coord.py  debug_kilca.edp  debug_shielding.py  electrostatics.edp  eps_plots.py  extmesh.edp  extmesh.py  ff-mephit.bash  fixed_point_plots.py  kinetic_plots.py  magdif.bash  magdif.idp  magdifplot.py  magdifplot.tex  magf_plots.py  mastu_plots.py  maxwell.edp  maxwell.sh  (+19 more)
setup/: archlinux.sh  debian.sh  mpcdf_viper.sh
src/: W2_arr.f90  axis.f90.09.03.17  bdivfree.f90  born_particles.f90  brent.f90  check_in_tri.f90  field_divB0.f90  field_line_integration_for_SYNCH.f90  geomint_mesh.f90  getIfunc.f90  hyper1F1.c  hyper1F1.h  in_out_cw.f90  inside_of_wall.f90  lpk_rngstream.f90  magdata_in_symfluxcoord.f90  magdif.f90  magdif.old.f90  magdif_config.f90  magdif_fem.c  magdif_fem.h  magdif_mesh_mod.f90  magdif_mesher.f90  magdif_pert.f90  magdif_run.c  magdif_test.f90  magdif_util.f90  magdif_util.h  magnetic_differential_equation.cpp  magnetic_differential_equation.h  mephit_conf.f90  mephit_equil.f90  mephit_fem.c  mephit_fem.cpp  mephit_fem.h  mephit_flr2.f90  mephit_iter.F90  mephit_iter.f90  mephit_mesh.F90  mephit_mesh.f90  (+29 more)
test/: field_divB0.inp  libmc_fffi.py  magdif.in  magdif.inp  magdif_fffi.py  pytest.ini  test_magfie_gfile.py  test_mesh.py
(+51 files in other folders)
