[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mephit_plot"
version = "0.0.1"
dependencies = [
    "colorcet>=3.0.0",
    "h5pickle",
    "h5py",
    "jupytext",
    "matplotlib",
    "netCDF4",
    "numpy",
    "scipy",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["mephit_plot*"]
namespaces = false
